# admission-control-grpc

./: Dockerfile.client  Dockerfile.server
client/: CMakeLists.txt  admission_clnt.cpp  admission_clnt.h
proto/: CMakeLists.txt  admission.grpc.pb.cc  admission.grpc.pb.h  admission.pb.cc  admission.pb.h  admission.proto  generate_grpc.sh
server/: CMakeLists.txt  admission_srv.cpp  admission_srv.h
standalone_client/: CMakeLists.txt  admission_client.cpp
standalone_server/: CMakeLists.txt  admission_server.cpp
